--- a/McMoviesSemana4/Views/Shared/_Layout.cshtml
+++ b/McMoviesSemana4/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Movies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Nueva" asp-action="Index">Nueva</a>
+                        </li>
                     </ul>
                 </div>
             </div>
